Adding LinkiedIn and change Social Media Logos

--- a/contactme.html
+++ b/contactme.html
@@ -48,19 +48,25 @@
 
         <div class="social">
             <div class="gmail">
-                <h2><a href="mailto:andreluiscapela@gmail.com">>>Email me<<</a></h2>
+                <h2><a href="mailto:andreluiscapela@gmail.com">Email me</a></h2>
                 <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt="My Email"></a>
             </div>
 
             <div class="instagram">
-                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">>>My Instagram<<</a></h2>
-                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/MYINSTA.jpeg" alt="My Instagram"></a>              
+                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">Instagram</a></h2>
+                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/INSTAGRAM.png" alt="My Instagram"></a>              
             </div>
 
             <div class="facebook">
-                <h2><a href="https://www.facebook.com/andreluis.dalva" target="_blank">>>My Facebook<<</a></h2>
-                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/MYFACEBOOK.jpg" alt="My Facebook"></a>
+                <h2><a href="https://www.facebook.com/andreluis.dalva" target="_blank">Facebook</a></h2>
+                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/FACEBOOK.png" alt="My Facebook"></a>
             </div>
+
+            <div class="linkedin">
+                <h2><a href="https://www.linkedin.com/in/andr%C3%A9-d-alva-6b67ba336/" target="_blank">LinkedIn</a></h2>
+                <a href="https://www.linkedin.com/in/andr%C3%A9-d-alva-6b67ba336/" target="_blank"><img src="Images/MYLINKEDIN.png" alt="My linkedin"></a>
+            </div>
+
         </div>
     </main>
 
