--- a/career.html
+++ b/career.html
@@ -75,7 +75,7 @@
                 II(Java).</p>
 
             <h3>Aimed Goals:</h3>
-            <p>For now, I am focused on learning Javascript and Database.</p>
+            <p>My current goal is to become a Full-Stack developer in the next 3 months, so for now I am focused on learning Javascript and Database, then I will be focusing in Spring Framework.</p>
         </section>
 
         <h2><span class="coloredLetter">S</span>kills:</h2>
