Adding the website about the hobbies

--- a/portifolio.html
+++ b/portifolio.html
@@ -71,6 +71,17 @@
                 </div>
 
                 <div class="myProjects htmlProjects" id="HtmlCSS02">
+                    <a href="https://andre-dalva.github.io/hobbywebsite/">
+                        <img src="Images/Projects/HOBBIES.png" alt="">
+                    </a>
+
+                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/hobbywebsite/">My hobbies Website</a></h4>
+
+                    <div class="projectDescription" id="HTML02Description">
+                        <p>HTML and CSS project.</p>
+                        <p>Duration: 13 days.</p>
+                        <p>Finishing date: 2025 May 6th.</p>
+                    </div>
                 </div>
 
                 <div class="myProjects htmlProjects" id="HtmlCSS03">
