--- a/career.html
+++ b/career.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="portifolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -40,7 +40,7 @@
                         <li>Career</li>
                     </a>
                     <a href="portifolio.html">
-                        <li>Portifolio</li>
+                        <li>Portfolio</li>
                     </a>
                     <a href="about.html">
                         <li>About</li>
@@ -70,88 +70,215 @@
                 Physics, Chemistry, Mathematics.</p>
 
             <h3>University:</h3>
-            <p>Currently in my second year at the University of Debrecen, majoring in Computer Science Engineering
+            <p>Currently in my third year at the University of Debrecen, majoring in Computer Science Engineering
                 (CSE), I have covered key subjects such as: Data Structures and Algorithms, Programming Languages I &
                 II(Java).</p>
 
             <h3>Aimed Goals:</h3>
-            <p>My current goal is to become a Full-Stack developer in the next 3 months, so for now I am focused on learning Javascript and Database, then I will be focusing in Spring Framework.</p>
+            <p>My current goal is to become a Full-Stack developer, so for now I am focused on learning React and
+                Database, then I will be focusing in Spring Framework.</p>
         </section>
 
-        <h2><span class="coloredLetter">S</span>kills:</h2>
+        <h2>Technical <span class="coloredLetter">S</span>kills & Competencies</h2>
+        <div>
+            <h3>CS Foundations:</h3>
+            <p>
+                Strong foundation in programming concepts, data structures, algorithms, and software design principles
+                including SOLID and KISS. <br> Familiar with high-level vs low-level language concepts and
+                problem-solving
+                techniques.
+            </p>
+
+            <br><br>
+        </div>
         <section id="skillsContainer">
 
             <section class="leftSkills">
                 <div class="skill">
-                    <h3>HTML5 & CSS3</h3>
-                    <p>With over 20h of self-teaching (through youtube tutorials, reading and practicing) I have learned the Fundamentals of HTML5 and CSS3.</p>
+                    <h3>Web Concepts</h3>
                     <p>
-                        <details>
-                            <summary>Topics:</summary>
-                            <p>&#x2022;<b>For HTML</b>&#x2022;</p>
-                            <p>&#x2022; <b>HTML Document structure:</b> Head and body tags</p>
-                            <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Images.</p>
-                            <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
-                            <p>&#x2022; <b>Semantic HTML:</b> Section,nav, main, header, footer, article and aside tags.</p>
-
-                            <p>&#x2022;<b>For CSS</b>&#x2022;</p>
-                            <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
-                            <p>&#x2022; <b>Box Model:</b> Margin, Border and Padding.</p>
-                            <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
-                            <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text-align, line-height,letter-spacing, font-family, font-weight, font size and Google Fonts.</p>
-                            <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
-                            <p>&#x2022; <b>Transitions and Animations.</b></p>
-                        </details>
+                        Understanding of core internet and web communication principles, including networking
+                        fundamentals and client-server architecture.
                     </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022;<b>IP & DNS</b></p>
+                        <p>&#x2022;<b>HTTP/HTTPS</b></p>
+                        <p>&#x2022;<b>Status codes</b></p>
+                        <p>&#x2022;<b>Headers</b></p>
+                        <p>&#x2022;<b>Cookies</b></p>
+                        <p>&#x2022;<b>Sessions</b></p>
+                        <p>&#x2022;<b>Client-Server Architecture (request-response model)</b></p>
+                        <p>&#x2022;<b>REST principles</b></p>
+                    </details>
                 </div>
 
                 <div class="skill">
-                    <h3>Git & Github</h3>
-                    <p>With over 8h of self-teaching (through youtube tutorials, reading and practicing), I have learned the core concepts of version control management (Git), as well as the importance of using remote repository (GitHub).</p>
+                    <h3>HTML5</h3>
                     <p>
-                        <details>
-                            <summary>Topics:</summary>
-                            <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
-                                delete, restore, ignore(.gitignore) and track files.</p>
-                            <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
-                            <p>&#x2022; <b>Committing:</b> Committing files, checking commits, comparing changes, resetting
-                                past commits.</p>
-                            <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
-                        </details>
+                        Solid understanding of semantic HTML, document structure, forms, validation, and
+                        accessibility-oriented markup.
                     </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>HTML Document structure:</b> Head and body tags</p>
+                        <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Images, Forms and
+                            Inputs.</p>
+                        <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
+                        <p>&#x2022; <b>Semantic HTML:</b> Section, nav, main, header, footer, article and aside tags.
+                        </p>
+                    </details>
                 </div>
+
+                <div class="skill">
+                    <h3>JavaScript</h3>
+                    <p>
+                        Strong knowledge of modern JavaScript (ES6+), asynchronous programming, DOM manipulation,
+                        modular
+                        code structure, and browser APIs.
+                    </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>
+                            &#x2022; <b>Data types</b>
+                        </p>
+                        <p>
+                            &#x2022; <b>Functions & closures</b>
+                        </p>
+                        <p>
+                            &#x2022; <b>Scope & hoisting</b>
+                        </p>
+                        <P>
+                            &#x2022; <b>Async JS</b>
+                        </P>
+                        <P>
+                            &#x2022; <b>Event loop</b>
+                        </P>
+                        <P>
+                            &#x2022; <b>DOM</b>
+                        </P>
+                        <P>
+                            &#x2022; <b>Browser APIs</b>
+                        </P>
+                        <P>
+                            &#x2022; <b>Modules</b>
+                        </P>
+                    </details>
+                </div>
+
+                <div class="skill">
+                    <h3>Spring Boot</h3>
+                    <p>
+                        Familiar with Spring Boot fundamentals including dependency injection, application
+                        configuration, persistence, and database integration.
+                    </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>Dependency Injection (IoC)</b></p>
+                        <p>&#x2022; <b>Spring Application Context</b></p>
+                        <p>&#x2022; <b>Spring Data JPA</b></p>
+                        <p>&#x2022; <b>Entity & Persistence Management</b></p>
+                        <p>&#x2022; <b>Database Migration with Flyway</b></p>
+                    </details>
+                </div>
+
+
             </section>
 
-            <section class="rightSkills"> 
+            <section class="rightSkills">
+                <div class="skill">
+                    <h3>Git & Github</h3>
+                    <p>
+                        Version control workflow using Git and GitHub, including branching strategies, commit
+                        management, staging, merging, and repository organization.
+                    </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
+                            delete, restore, ignore(.gitignore) and track files.</p>
+                        <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
+                        <p>&#x2022; <b>Committing:</b> Committing files, checking commits, comparing changes, resetting
+                            past commits.</p>
+                        <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
+                    </details>
+                </div>
+
+                <div class="skill">
+                    <h3>CSS3</h3>
+                    <p>
+                        Responsive layout design using modern CSS techniques including Flexbox, positioning, and visual
+                        styling principles.
+                    </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
+                        <p>&#x2022; <b>Box Model:</b> Margin, Border and Padding.</p>
+                        <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
+                        <p>&#x2022;
+                            <b>Typography & Colors:</b> Color, background-color, text-align,
+                            line-height,letter-spacing, font-family, font-weight, font size and Google Fonts.
+                        </p>
+                        <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
+                        <p>&#x2022; <b>Transitions and Animations</b></p>
+                        <p>&#x2022; <b>Responsive design</b></p>
+                    </details>
+                </div>
+
                 <div class="skill">
                     <h3>Java</h3>
-                    <p>With over 5h of youtube tutorials and 22h of practical classes at the University I have learned the intermediate and some advanced concepts of Java.</p>
                     <p>
-                        <details>
-                            <summary>Topics:</summary>
-                            <p>
-                                &#x2022; <b>Java Basics:</b> Variables, Data types, Operators and Expressions.
-                            </p>
-                            <p>
-                                &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
-                            </p>
-                            <p>
-                                &#x2022; <b>Object-Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
-                                Encapsulation, Interfaces and Abstraction.
-                            </p>
-                            <P>
-                                &#x2022; <b>Exception Handling:</b> Try-catch blocks and custom exception handling.
-                            </P>
-                            <P>
-                                &#x2022; <b>File Handling:</b> Reading and writing to files.
-                            </P>
-                            <!--<P>
-                            &#x2022; Collections Framework: List, Set, Map, Iterators, Enumerations, ArrayList, LinkedList, HashSet,
-                            HashMap,TreeSet and TreeMap.
-                            </P>-->
-                        </details>
+                        Strong foundation in Java with focus on object-oriented design and core language features.
                     </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>
+                            &#x2022; <b>Java Basics:</b> Variables, Data types, Operators and Expressions.
+                        </p>
+                        <p>
+                            &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
+                        </p>
+                        <p>
+                            &#x2022; <b>Object-Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
+                            Encapsulation, Interfaces and Abstraction.
+                        </p>
+                        <P>
+                            &#x2022; <b>Exception Handling:</b> Try-catch blocks and custom exception handling.
+                        </P>
+                        <P>
+                            &#x2022; <b>File Handling:</b> Reading and writing to files.
+                        </P>
+                        <P>
+                            &#x2022; <b>Advanced:</b> Generics and Lambda Expressions.
+                        </P>
+                        <P>
+                            &#x2022; Collections Framework: List, Set, Map, ArrayList, LinkedList, HashSet,
+                            HashMap,TreeSet and TreeMap.
+                        </P>
+                    </details>
                 </div>
+
+                <div class="skill">
+                    <h3>SQL</h3>
+                    <p>
+                        Working knowledge of relational database concepts, querying, and data manipulation using SQL.
+                    </p>
+
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>SELECT, INSERT, UPDATE, DELETE</b></p>
+                        <p>&#x2022; <b>WHERE & Filtering</b></p>
+                        <p>&#x2022; <b>JOIN Operations</b></p>
+                        <p>&#x2022; <b>GROUP BY & Aggregation</b></p>
+                    </details>
+                </div>
+
             </section>
 
         </section>
