--- a/contactme.html
+++ b/contactme.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact me</title>
+    <title>My Socials</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/contactme.css">
     <script src="https://kit.fontawesome.com/ed8ed1d0d5.js" crossorigin="anonymous"></script>
@@ -20,13 +20,13 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="portifolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
 
         <div class="contactMe">
-            <a href="contactme.html"><button class="siteButton">Contact me</button></a>
+            <a href="contactme.html"><button class="siteButton">My Socials</button></a>
         </div>
 
         <div class="dropmenu">
@@ -52,19 +52,14 @@
                 <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt="My Email"></a>
             </div>
 
-            <div class="instagram">
-                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">Instagram</a></h2>
-                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/INSTAGRAM.png" alt="My Instagram"></a>              
-            </div>
-
-            <div class="facebook">
-                <h2><a href="https://www.facebook.com/andreluis.dalva" target="_blank">Facebook</a></h2>
-                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/FACEBOOK.png" alt="My Facebook"></a>
-            </div>
-
             <div class="linkedin">
-                <h2><a href="https://www.linkedin.com/in/andr%C3%A9-d-alva-6b67ba336/" target="_blank">LinkedIn</a></h2>
-                <a href="https://www.linkedin.com/in/andr%C3%A9-d-alva-6b67ba336/" target="_blank"><img src="Images/MYLINKEDIN.png" alt="My linkedin"></a>
+                <h2><a href="https://www.linkedin.com/in/andr%C3%A9-luis-d-alva-6b67ba336/" target="_blank">LinkedIn</a></h2>
+                <a href="https://www.linkedin.com/in/andr%C3%A9-luis-d-alva-6b67ba336/" target="_blank"><img src="Images/MYLINKEDIN.png" alt="My linkedin"></a>
+            </div>
+
+            <div class="github">
+                <h2><a href="https://github.com/Andre-Dalva" target="_blank">GitHub</a></h2>
+                <a href="https://github.com/Andre-Dalva" target="_blank"><img src="Images/GITHUB.png" alt="My GitHub"></a>
             </div>
 
         </div>
