--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="portifolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -36,7 +36,7 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="career.html"><li>Career</li></a>
-                    <a href="portifolio.html"><li>Portifolio</li></a>
+                    <a href="portifolio.html"><li>Portfolio</li></a>
                     <a href="about.html"><li>About</li></a>
                     <a href="contactme.html"><li>Contact me</li></a>
                 </ul>
@@ -57,7 +57,7 @@
 
                 <hgroup>
                     <h2>Not much to say, <br> technology enthusiast..<span class="blink">.</span></h2>
-                    <h2>Developer</h2>
+                    <h2>Software Developer</h2>
                     <h2><span class="blink slow">(In progress)</span></h2>
                 </hgroup>
 
