--- a/portifolio.html
+++ b/portifolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/portifolio.css">
     <script src="https://kit.fontawesome.com/ed8ed1d0d5.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="portifolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="career.html"><li>Career</li></a>
-                    <a href="portifolio.html"><li>Portifolio</li></a>
+                    <a href="portifolio.html"><li>Portfolio</li></a>
                     <a href="about.html"><li>About</li></a>
                     <a href="contactme.html"><li>Contact me</li></a>
                 </ul>
@@ -49,91 +49,72 @@
 
         <section class="webSkills">
 
-            <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="career.html">Html & CSS</a></h2>
-                <img src="Images/HTMLCSS-LOGO1.png" alt="Html and CSS logo" class="Logo">
-            </div>
-
             <div class="skills">
 
-                <div class="myProjects htmlProjects" id="HtmlCSS01">
+                <div class="myProjects" id="HtmlCSS01">
                     <a href="index.html">
-                        <img src="Images/Projects/HTMLCSSPROJECT01.png" alt="Photo to represent my Website">
-                    </a>
-
-                    <h4 class="projectTitle"><a href="index.html">My Developer Website</a></h4>
-
-                    <div class="projectDescription" id="HTML01Description">
-                        <p>HTML and CSS project.</p>
-                        <p>Duration: 10 days.</p>
-                        <p>Finishing date: 2025 February 21th.</p>
-                    </div>
-                </div>
-
-                <div class="myProjects htmlProjects" id="HtmlCSS02">
-                    <a href="https://andre-dalva.github.io/hobbywebsite/">
-                        <img src="Images/Projects/HOBBIES.png" alt="">
-                    </a>
-
-                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/hobbywebsite/">My hobbies Website</a></h4>
-
-                    <div class="projectDescription" id="HTML02Description">
-                        <p>HTML and CSS project.</p>
-                        <p>Duration: 13 days.</p>
-                        <p>Finishing date: 2025 May 6th.</p>
-                    </div>
-                </div>
-
-                <div class="myProjects htmlProjects" id="HtmlCSS03">
-                </div>
-
-            </div>
-
-            <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="career.html">Html, CSS & Javascript </a></h2>
-                <img src="Images/HTMLCSSJS-LOGO.png" alt="Html, CSS and Javascript logo" class="Logo">
-            </div>
-
-            <div class="skills">
-
-                <div class="myProjects" id="HtmlJS01">
-
-                    <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">
-                        <img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter">
+                        <img src="Images/Projects/HTMLCSSPROJECT01.png" alt="Project photo">
                     </a>
 
                     <h4 class="projectTitle">
-                        <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">Temperature Converter</a>
+                        <a href="index.html">My Developer Website</a>
                     </h4>
 
-                    <div class="projectDescription" id="HtmlJS01Description">
-                        <p>HTML, CSS and JavaScript project.</p>
-                        <p>Duration: 5 hours.</p>
-                        <p>Finishing date: 2025 March 8th.</p>
-                    </div></a>
+                    <div class="projectDescription">
+                        <p>HTML and CSS project.</p>
+                        <p>GitHub:<a href="https://github.com/Andre-Dalva/webportifolio" target="_blank">View Code</a></p>
+                    </div>
                 </div>
 
-                <div class="myProjects" id="HtmlJS02">
-
-                    <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">
-                        <img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program">
+                <div class="myProjects" id="HtmlCSS02">
+                    <a href="https://hobbywebsite-psi.vercel.app/" target="_blank">
+                        <img src="Images/Projects/HOBBIES.png" alt="Project photo">
                     </a>
 
                     <h4 class="projectTitle">
-                        <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">Random Password Generator</a>
+                        <a href="https://hobbywebsite-psi.vercel.app/" target="_blank">My hobbies Website</a>
                     </h4>
 
-                    <div class="projectDescription" id="HtmlJS02Description">
-                        <p>HTML, CSS and JavaScript project.</p>
-                        <p>Duration: 8 hours.</p>
-                        <p>Finishing date: 2025 March 9th.</p>
+                    <div class="projectDescription">
+                        <p>HTML and CSS project.</p>
+                        <p>GitHub:</p>
+                    </div>
+                </div>
+
+                <div class="myProjects" id="HtmlCSSJS03">
+                    <a href="https://sde-school-system-group.vercel.app/" target="_blank">
+                        <img src="Images/Projects/SCHOOL.png">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://sde-school-system-group.vercel.app/" target="_blank">School</a>
+                    </h4>
+
+                    <div class="projectDescription">
+                        <p>HTML5, CSS3 and JavaScript project.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/sde_school_system_group/tree/main/Frontend" target="_blank"><u>View Code</u></a></p>
+                    </div>
+                </div>
+
+                <div class="myProjects" id="HtmlCSSJS04">
+                    <a href="https://weather-app-xi-indol-67.vercel.app/" target="_blank">
+                        <img src="Images/Projects/WEATHER.png" alt="Project Image">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://weather-app-xi-indol-67.vercel.app/" target="_blank">Weather App</a>
+                    </h4>
+
+                    <div class="projectDescription">
+                        <p>HTML5, CSS3 and TypeScript project.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/WeatherApp"><u>View Code</u></a></p>
                     </div>
                 </div>
 
                 <div class="myProjects" id="HtmlJS03">
 
                     <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html" target="_blank">
-                        <img src="Images/Projects/RockPaperandScissors.png" alt="">
+                        <img src="Images/Projects/RockPaperandScissors.png" alt="Project photo">
                     </a>
 
                     <h4 class="projectTitle">
@@ -142,15 +123,46 @@
 
                     <div class="projectDescription" id="HtmlJS03Description">
                         <p>HTML, CSS and JavaScript project.</p>
-                        <p>Duration: 4 days.</p>
-                        <p>Finishing date: 2025 March 20th.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/rockpaperscissorsgame"><u>View Code</u></a></p>
+                    </div>
+                </div>
+
+                <div class="myProjects" id="HtmlJS01">
+
+                    <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">
+                        <img src="Images/Projects/TemperatureConverter.png" alt="Project photo">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">Temperature Converter</a>
+                    </h4>
+
+                    <div class="projectDescription" id="HtmlJS01Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/temperatureconverter"><u>View Code</u></a></p>
+                    </div>
+                </div>
+
+                <div class="myProjects" id="HtmlJS02">
+
+                    <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">
+                        <img src="Images/Projects/PASSWORDGENERATOR.png" alt="Project photo">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">Random Password Generator</a>
+                    </h4>
+
+                    <div class="projectDescription" id="HtmlJS02Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/passwordgenerator"><u>View Code</u></a></p>
                     </div>
                 </div>
 
                 <div class="myProjects" id="HtmlJS04">
 
                     <a href="https://andre-dalva.github.io/clock/" target="_blank">
-                        <img src="Images/Projects/CLOCK.png" alt="">
+                        <img src="Images/Projects/CLOCK.png" alt="Project photos">
                     </a>
 
                     <h4 class="projectTitle">
@@ -159,44 +171,8 @@
 
                     <div class="projectDescription" id="HtmlJS04Description">
                         <p>HTML, CSS and JavaScript project.</p>
-                        <p>Duration: 6 hours.</p>
-                        <p>Finishing date: 2025 March 31st.</p>
+                        <p>GitHub: <a href="https://github.com/Andre-Dalva/clock"><u>View Code</u></a></p>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="programmingSkill">
-
-            <div class="skillsTitleLogo">
-                <h2 class="skillsTitle" id="javaTitle"><a href="career.html">Java</a></h2>
-                <img src="Images/JAVA-LOGO1.png" alt="Java logo" class="Logo" id="JAVA-LOGO">
-            </div>
-
-            <div class="skills">
-                <div class="myProjects javaProjects" id="Java01">
-                </div>
-
-                <div class="myProjects javaProjects" id="Java02">
-                </div>
-
-                <div class="myProjects javaProjects" id="Java03">
-                </div>
-            </div>
-
-            <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="career.html">Data Base Handling</a></h2>
-                <img src="Images/DATABASE-LOGO1.png" alt="Database Logo" class="Logo" id="DATABASE-LOGO1">
-            </div>
-
-            <div class="skills">
-                <div class="myProjects databaseProjects" id="Database01">
-                </div>
-
-                <div class="myProjects databaseProjects" id="Database02">
-                </div>
-
-                <div class="myProjects databaseProjects" id="Database03">
                 </div>
             </div>
         </section>
