--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="portifolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="career.html"><li>Career</li></a>
-                    <a href="portifolio.html"><li>Portifolio</li></a>
+                    <a href="portifolio.html"><li>Portfolio</li></a>
                     <a href="about.html"><li>About</li></a>
                     <a href="contactme.html"><li>Contact me</li></a>
                 </ul>
